# sftp-watcher

./: .copier-answers.yml  .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  renovate.json
.github/: CONTRIBUTING.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a773de649c32_create_downloaded_files_table.py
charts/sftp-watcher/: .helmignore  Chart.yaml  values.yaml
charts/sftp-watcher/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  database-admin-deployment.yaml  database-admin-route.yaml  database-admin-service.yaml  deployment.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
src/sftp_watcher/: __main__.py  app.py  config.py  sftp_client.py  sftp_watcher.py  telemetry.py  utils.py
src/sftp_watcher/credentials/: __init__.py  config_provider.py  cyberark_ccp_provider.py  provider.py
src/sftp_watcher/lifecycles/: lifecycle.py  local_file_cleanup.py
src/sftp_watcher/processor/: processor.py  tarball_processor.py
src/sftp_watcher/processor/action/: aap_client.py
src/sftp_watcher/state_store/: __init__.py  models.py  repository.py  schema.py  service.py  sqlite_repository.py
tests/: test_cli.py  test_local_file_cleanup_lifecycle.py  test_sftp_client.py  test_utils.py
tests/state_store/: test_service.py  test_sqlite_repository.py
